--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "description": "yunusjon",
   "author": "Yunuscode",
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
@@ -18,7 +16,6 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "gatsby": "^5.13.3",
-    "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
