--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "yunusjon",
   "author": "Yunuscode",
   "keywords": ["gatsby"],
+  "_moduleAliases": {
+    "@root": "./src"
+  },
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
@@ -16,6 +19,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "gatsby": "^5.13.3",
+    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-postcss": "^6.13.1",
@@ -23,6 +27,7 @@
     "gatsby-plugin-sitemap": "^6.13.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
+    "module-alias": "^2.2.3",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
